make footer float, fix missing padding on small screens

--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ main {
 }
 
 footer {
+    max-width:min(800px, calc(100vw - 30px));
+    border-radius:100px;
+    margin:10px auto;
     padding:10px 5px;
     background-color:#502030;
     color:white;
@@ -41,6 +44,7 @@ footer a {
 .contain {
     max-width:800px;
     margin:0 auto;
+    padding:0 10px;
 }
 
 .text-center {
